--- a/.github/workflows/build-mt1300-gl.yml
+++ b/.github/workflows/build-mt1300-gl.yml
@@ -13,6 +13,12 @@ name: Build MT1300 from GL-iNet
 
 on:
   repository_dispatch:
+  workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: false
+        default: 'false'
   release:
     types: published
 
